--- a/CSS/style.css
+++ b/CSS/style.css
@@ -110,8 +110,8 @@ flex-direction: row;
 .theme {
   --bg-color: #111;
   --main-color: #fefefe;
-  position: absolute;
-  left: 63%;
+  position: relative;
+  left: 10%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -372,11 +372,10 @@ background-color: whitesmoke;
   left: -76px;
   bottom: 0;
   right: 0;
-  height: 40px;
+  height: 45px;
   padding: 0 0 0 5px;
   border: 1px solid black;
   border-radius: 10px;
-}
 }
 .search .notPend{
   display: none;
@@ -390,3 +389,4 @@ background-color: whitesmoke;
   font-size: 25px;
   border-radius: 8px;
 }
+ }
